fixed a contrast issue

--- a/styles/atoms.scss
+++ b/styles/atoms.scss
@@ -94,7 +94,7 @@ p {
 }
 
 a {
-    color: $tan;
+    color: $darkbrown;
     text-decoration: none;
     transition: color .5s;
 }
